tests/parser/var_err8.expected
Syntax Error: line 8:
Unexpected token (TOK_PERIOD, '.'), likely missing a(n)  
  'TOK_SEMICOLON' or
  'TOK_KEY_END'
