tests/parser/var_err8.mtp
(* variable section start *)

var test: integer;

begin

(*missing end*)
.